fix(audio): resolve WebRTC 0 FPS black screen and Scope v0.1.4 startup crashes

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,8 @@ SCOPE_PROXY_MAX_BODY_BYTES=524288
 # Keep false in production unless your platform sanitizes forwarding headers.
 SCOPE_PROXY_TRUST_FORWARDED_IP=false
 # SCOPE_PROXY_IP_HEADER=x-forwarded-for
+
+# HuggingFace token — required on RunPod for Cloudflare TURN (WebRTC relay)
+# and gated model downloads. Set this BOTH here and on the RunPod pod env.
+# Get token at: https://huggingface.co/settings/tokens (read access)
+HF_TOKEN=
