Harden Soundscape MVP launch readiness and operations

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "build": "next build",
     "start": "next start -H 0.0.0.0 -p ${PORT:-3500}",
     "lint": "eslint --max-warnings=0 .",
-    "type-check": "tsc --noEmit",
+    "type-check": "next typegen && tsc --noEmit",
     "test": "vitest run",
     "check:scope": "node scripts/check-scope-api.mjs",
+    "check:launch": "node scripts/check-launch-config.mjs",
     "test:watch": "vitest watch"
   },
   "dependencies": {
@@ -28,9 +29,9 @@
     "@types/node": "^24.10.2",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.46.3",
-    "@typescript-eslint/parser": "^8.46.3",
-    "eslint": "^9.39.1",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
+    "eslint": "^9.39.3",
     "eslint-config-next": "^16.1.6",
     "jsdom": "^27.4.0",
     "postcss": "^8.4.49",
